--- a/index.html
+++ b/index.html
@@ -5,24 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>Quote Generator</title>
+    <script
+      src="https://kit.fontawesome.com/b7054c3b06.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <main>
-      <div class="container">
-        <div class="quote__box">
-          <div class="quote__content" id="content"></div>
-          <div class="quote__author" id="author"></div>
-          <button class="quote__button" onclick="getRandomQuote()">
-            Next Quote
-          </button>
-          <div class="twitter__button"></div>
-        </div>
+    <div class="container">
+      <div class="quote__box">
+        <a id="tweet" onclick="twitterShare()"
+          ><i class="fa fa-twitter" aria-hidden="true"></i
+        ></a>
+
+        <div class="quote__content" id="content"></div>
+        <div class="quote__author" id="author"></div>
+        <button class="quote__button" onclick="getRandomQuote()">
+          Next Quote
+        </button>
+        <a href="https://github.com/rajatkulkarni95/quote-generator"
+          ><i class="fa fa-github" aria-hidden="true"></i>
+        </a>
       </div>
-    </main>
-    <footer>
-      Made by
-      <a href="https://github.com/rajatkulkarni95/quote-generator">Rajat</a>
-    </footer>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
